# introlix-app

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  README.md  app.py  links.txt  pyproject.toml  render.yaml  result.json  test.py  test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  performance-issue.md  ui-ux-improvement.md
app/: package.json
config/: settings.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  QUICK_REFERENCE.md  SEARXNG_SETUP.md
introlix/: config.py  database.py  deep_research.py  llm_config.py  models.py  schemas.py
introlix/agents/: base_agent.py  baseclass.py  chat_agent.py  context_agent.py  edit_agent.py  explorer_agent.py  knowledge_gap.py  planner_agent.py  researcher.py  verifier.py  verify_report.py  writer_agent.py  writter_agent.py
introlix/models/: chat.py
introlix/routes/: chat.py  deep_research.py  research_desk.py
introlix/services/: LLMState.py  download_llm.py
introlix/tools/: web_crawler.py  web_search.py
introlix/utils/: __init__.py  text_chunker.py  title_gen.py
web/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/providers/: ReactQueryProvider.tsx  query-provider..tsx
web/src/app/settings/configuration/: page.tsx
web/src/app/settings/general/: page.tsx
web/src/app/workspaces/: page.tsx
web/src/app/workspaces/[workspaceid]/: page.tsx
web/src/app/workspaces/[workspaceid]/[chat]/: page.tsx
web/src/app/workspaces/[workspaceid]/[chat]/[chatid]/: page.tsx
web/src/app/workspaces/[workspaceid]/chat/: page.tsx
web/src/app/workspaces/[workspaceid]/chat/[chatid]/: page.tsx
web/src/app/workspaces/[workspaceid]/desk/: page.tsx
web/src/app/workspaces/[workspaceid]/desk/[deskid]/: page.tsx
web/src/components/: agent-status.tsx  app-sidebar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-page.tsx  context-agent-panel.tsx  context-input.tsx  desk-ai-pannel.tsx  desk-plans-card.tsx  new-chat-dialog.tsx  new-desk-dialog.tsx  new-workspace-dialog.tsx  settings-sidebar.tsx  text-editor.tsx
web/src/hooks/: use-chat.ts  use-desk.ts  use-streaming.ts
web/src/lib/: api.ts  types.ts  utils.ts
web/src/types/: lodash-debounce.d.ts
