[project]
name = "introlix-research"
description = "A research platform for researchers"
authors = [{ name = "Satyam Mishra" }]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "llama-cpp-python>=0.3.16",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.5",
    "platformdirs>=4.3.8",
    "fastapi>=0.116.1",
    "torch>=2.8.0",
    "aiohttp>=3.12.15",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.7",
    "tiktoken>=0.11.0",
    "pinecone>=7.3.0"
]
[tool.setuptools.packages.find]
include = ["introlix*"]
exclude = ["web*"]