[project]
name = "introlix-research"
description = "An AI-powered research platform that transforms how you conduct research"
authors = [{ name = "Satyam Mishra", email = "satyam@introlix.ai" }]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
keywords = [
    "ai",
    "research",
    "llm",
    "agent",
    "search",
    "knowledge-management",
    "fastapi",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI",
]

dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "llama-cpp-python>=0.3.16",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.5",
    "platformdirs>=4.3.8",
    "fastapi>=0.116.1",
    "uvicorn>=0.37.0",
    "torch>=2.8.0",
    "aiohttp>=3.12.15",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.7",
    "tiktoken>=0.11.0",
    "pinecone>=8.0.0",
    "motor>=3.7.1",
    "sentence-transformers>=5.1.2",
    "playwright>=1.56.0",
]
[tool.setuptools.packages.find]
include = ["introlix*"]
exclude = ["web*"]

[project.urls]
Homepage = "https://github.com/introlix/introlix"
Repository = "https://github.com/introlix/introlix"
Documentation = "https://github.com/introlix/introlix/tree/main/docs"
"Bug Tracker" = "https://github.com/introlix/introlix/issues"